# dependabot-private-repo

./: pyproject.toml
.github/: dependabot.yml
