[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "myproject"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
lib-a = {git = "git@github.com:kokosoida/priv.git", rev = "main", subdirectory = "lib_a"}
jsonschema = "4.1.0"
